# voice-typing

./: CONTEXT.md  README.md  flake.nix  pyproject.toml  run.sh  voice-typing.service  voicetype.py
deploy/: config.toml  voice-status.html
docs/adr/: 0001-input-capture-via-inert-qmk-key.md  0002-x11-grabbed-ptt-chord.md  0003-streaming-localagreement-append-only.md  0004-nemotron-streaming-via-parakeet-cpp.md
nix/: apply_ggml_patches.sh  parakeet-cpp.nix
samples/: README.md  coding.json  meeting.json  pangram.json  terminal.json  why.json
tests/: test_finalize_gpu.py  test_live.py  test_localagreement.py  test_parakeet.py
tools/: moonshine_probe.py  parakeet_probe.py  record_sample.py  replay_sample.py  toggle.sh  tts_sample.py
voicetype/: __init__.py  __main__.py  app.py  audio.py  config.py  download.py  parakeet.py  ptt.py  typist.py  whisper.py
