[project]
name = "voice-typing"
version = "0.1.0"
description = "Minimal local push-to-talk voice typing: hold a key, speak, release, it types."
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "soundcard>=0.4.3",
    "python-xlib>=0.33",
    "numpy>=2.0.0",
    # CUDA runtime libs CTranslate2 needs (cuBLAS + cuDNN 9). Pulled into the venv so the
    # system CUDA toolkit version is irrelevant; only the GPU driver matters.
    "nvidia-cublas-cu12>=12.3",
    "nvidia-cudnn-cu12>=9.0",
]

[tool.uv]
# Keep the resolver from pulling a CPU-only torch; faster-whisper does not need torch.
package = false
