[project]
name = "voice-typing"
version = "0.1.0"
description = "Minimal local push-to-talk voice typing: hold a key, speak, release, it types."
requires-python = ">=3.11"
dependencies = [
    "soundcard>=0.4.3",
    "python-xlib>=0.33",
    "numpy>=2.0.0",
]

[project.scripts]
voicetype = "voicetype.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicetype"]

[tool.uv]
package = true
